{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "a9ef0f5b-882f-4373-842a-60832eab08d7",
            "actions": [
                {
                    "name": "Dodge_L",
                    "type": "Button",
                    "id": "9141d74d-d87c-46f5-8ff1-dcff0cea10e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge_R",
                    "type": "Button",
                    "id": "dd4a34b4-1414-4115-9a0e-c5b4ff92dba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Punch_L",
                    "type": "Button",
                    "id": "dfd5f5fb-175e-4809-b3b9-0dfbd7bf2fe7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Punch_R",
                    "type": "Button",
                    "id": "8101344a-9fd6-4250-bdfa-b3ad5001c469",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "a69d3517-50b0-4081-802b-9df20550b760",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "43ac1fc3-f672-4a89-815f-23e559c90ae1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e9df574-cee9-46c7-a491-5c87186ae9cd",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a25a2636-e77a-46a8-9868-973fe3e92b90",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68a622fb-f660-4eaf-8fc2-00281d3d2671",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26a1bae4-030d-49f8-a9e8-14459f217949",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e743cc34-13bd-4ce7-b0d1-59e3b4f49f39",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "642fa40a-32ec-4236-85d5-d7008e72eeb4",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}